syntax = "proto3";

package admins;

option go_package = "/admins";

message ValidateAdminRequest {
  string email = 1;
  string password = 2;
}

message ValidateAdminResponse {
  bool is_valid = 1;
  string message = 2;
  int64 admin_id = 3; 
}

service AdminService {
  rpc ValidateAdmin (ValidateAdminRequest) returns (ValidateAdminResponse);
}
